Signed-off-by: Lyons888 <cq16350123@qq.com>

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>锐森设计研发咨询公司 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
+	<title>锐森设计 研发咨询公司 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
 	<script type="text/javascript" src="js/jquery.js"></script>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/head.js"></script>
     <meta name="keywords" content="荆门设计公司 广州设计公司 UI设计 界面设计 软件开发 广东设计公司 番禺设计公司 用户咨询 用户体验 产品策划 品牌宣传 平面设计">
+    <link href="favicon.ico" mce_href="favicon.ico" rel="bookmark" type="image/x-icon" />
+	<link href="favicon.ico" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+	<link href="favicon.ico" mce_href="favicon.ico" rel="icon" type="image/x-icon" />
+
 </head>
 <div class="head">
 		<div class="logo">
