Signed-off-by: Lyons888 <cq16350123@qq.com>

--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>锐森设计研发咨询公司 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
+	<title>锐森设计 研发咨询 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
 	<script type="text/javascript" src="js/jquery.js"></script>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/head.js"></script>
-    <meta name="keywords" content="荆门设计公司 广州设计公司 UI设计 界面设计 软件开发 广东设计公司 番禺设计公司 用户咨询 用户体验 产品策划 品牌宣传 平面设计">
+    <meta name="keywords" content="荆门设计 广州设计 UI设计 界面设计 软件开发 广东设计 番禺设计 用户咨询 用户体验 产品策划 品牌宣传 平面设计">
 </head>
 <div class="head">
 		<div class="logo">
@@ -25,7 +25,7 @@
 </div>
 <div class="ctnn">
 	<div class="ctnn_a">
-		<h1 >锐森是一家集品牌策划、设计推广、网站建设、移动设计研发、平台设计研发于一体的设计研发公司</h1>
+		<h1 >锐森精于品牌策划、设计推广、网站建设、移动设计研发、平台设计研发</h1>
 		<p>我们一直坚持挑战未知，寻求突破，并不断探索商业产品的优质体验与创新设计。我们坚持以人为本，一切以用户价值和客户服务体验为核心价值，不断的突破和创新。一直在客户与用户之间寻求黄金分割点，为客户也为用户创造最大的价值！
 		我们相信，设计源于生活，价值源于创新。我们会一直坚持初心，为更多的企业客户创造更大的价值！</p>
 	</div>
