--- a/case.html
+++ b/case.html
@@ -30,10 +30,10 @@
 		<div class="pic"><a href="case2.html" ><div class="picaa"><img src="image/pic2.jpg"></div><h4>金融产品paylater</h4><p>一款消费分期产品</p></a></div>
 		<div class="pic"><a href="case3.html" ><div class="picaa"><img src="image/pic3.jpg"></div><h4>读书汇</h4><p>汽看书、听书、线上课堂、线下讲课</p></a></div>
 		<div class="pic"><a href="case4.html" ><div class="picaa"><img src="image/pic4.jpg"></div><h4>T2电动牙刷电商</h4><p>针对电动牙刷的商场详情页</p></a></div>
-		<div class="pic"><a href="case5.html" ><div class="picaa"><img src="image/pic5.jpg"></div><h4>吉利汽车GKUI 界面设计</h4><p>汽车导航：视觉设计+交互设计</p></a></div>
+<!-- 		<div class="pic"><a href="case5.html" ><div class="picaa"><img src="image/pic5.jpg"></div><h4>吉利汽车GKUI 界面设计</h4><p>汽车导航：视觉设计+交互设计</p></a></div> -->
 		<div class="pic"><a href="case6.html" ><div class="picaa"><img src="image/pic6.jpg"></div><h4>健康照料服务应用</h4><p>面向大众的一款卫生服务应用</p></a></div>
 		<div class="pic"><a href="case7.html" ><div class="picaa"><img src="image/pic7.jpg"></div><h4>海外数字服务门户</h4><p>来自海外客户的门户</p></a></div>
-		<div class="pic"><a href="case8.html" ><div class="picaa"><img src="image/pic8.jpg"></div><h4>吉利汽车GKUI 界面设计</h4><p>汽车导航：视觉设计+交互设计</p></a></div>
+<!-- 		<div class="pic"><a href="case8.html" ><div class="picaa"><img src="image/pic8.jpg"></div><h4>吉利汽车GKUI 界面设计</h4><p>汽车导航：视觉设计+交互设计</p></a></div> -->
 	</div>
 </div>
 
