--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>锐森设计 研发咨询公司 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
+	<title>锐森设计 研发咨询 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
 	<script type="text/javascript" src="js/jquery.js"></script>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/head.js"></script>
-    <meta name="keywords" content="荆门设计公司 广州设计公司 UI设计 界面设计 软件开发 广东设计公司 番禺设计公司 用户咨询 用户体验 产品策划 品牌宣传 平面设计">
+    <meta name="keywords" content=" app设计 广州设计 广州界面设计 平台开发 武汉设计 荆门设计  广州软件开发 武汉软件开发 武汉小程序设计 广州小程序设计  UI设计 界面设计 软件开发 广东设计 番禺设计 用户咨询 用户体验 产品策划 品牌宣传 平面设计">
     <link href="favicon.ico" mce_href="favicon.ico" rel="bookmark" type="image/x-icon" />
 	<link href="favicon.ico" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 	<link href="favicon.ico" mce_href="favicon.ico" rel="icon" type="image/x-icon" />
@@ -28,7 +28,7 @@
  	<h5 >深耕设计与研发15载，用我们的专业成就您的事业</h5>
  <div class="ct_1">
 		<ul class="td">
-			<li><img class="td_1a" src="image/icon1.png"><h4>品牌策略</h4><p>公司的品牌策划、广告宣传设计与传播，企业LOGO、VI、企业形象设计、宣传与推广...</p></li>
+			<li><img class="td_1a" src="image/icon1.png"><h4>品牌策略</h4><p>企业品牌策划、广告宣传设计与传播，企业LOGO、VI、企业形象设计、宣传与推广...</p></li>
 			<li><img class="td_1a" src="image/icon2.png"><h4>交互设计</h4><p>基于用户研究分析，建立符合用户使用场景和用户真正需求的交互模型...</p></li>
 			<li><img class="td_1a"src="image/icon3.png"><h4>视觉设计</h4><p>打造高品质专属于本企业的产品视觉设计，专注网站UI设计、移动UI设计、可视化平台设计等...</p></li>
 			<li><img class="td_1a"  src="image/icon4.png"><h4>程序开发</h4><p>深耕网站、小程序、公众号、企业数据平台研发，用最优最低廉的成本打造最好的开发体验...</p></li>
