--- a/service.html
+++ b/service.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>锐森设计研发咨询公司 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
+	<title>锐森设计研发咨询 交互设计 界面设计 软件开发 产品策略 品牌策划 平面广告</title>
 	<script type="text/javascript" src="js/jquery.js"></script>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/head.js"></script>
-    <meta name="keywords" content="荆门设计公司 广州设计公司 UI设计 界面设计 软件开发 广东设计公司 番禺设计公司 用户咨询 用户体验 产品策划 品牌宣传 平面设计">
+    <meta name="keywords" content="荆门设计 广州设计 UI设计 界面设计 软件开发 广东设计 番禺设计 用户咨询 用户体验 产品策划 品牌宣传 平面设计">
 </head>
 <div class="head">
 		<div class="logo">
@@ -24,7 +24,7 @@
  	<h5 >我们会倾尽所能，力求创造最完美服务</h5>
 </div>
 <div class="ctna">
-	<h1 >锐森是一家创新设计与研发服务公司</h1>
+	<h1 >我们精于创新设计与研发</h1>
 <div class="ctn_1">
 		<ul class="tdn">
 			<li class="aa"><img class="td_1a" src="image/icond.png"><h4>基础品牌的建立</h4><p>企业品牌LOGO、画册、海报、网站、移动端设计与开发</p></li>
