Signed-off-by: Lyons888 <cq16350123@qq.com>

--- a/case.html
+++ b/case.html
@@ -33,7 +33,8 @@
 		<div class="pic"><a href="case5.html" ><div class="picaa"><img src="image/pic5.jpg"></div><h4>全品学堂</h4><p>针对k18教育的移动端产品</p></a></div>
 		<div class="pic"><a href="case6.html" ><div class="picaa"><img src="image/pic6.jpg"></div><h4>健康照料服务应用</h4><p>面向大众的一款卫生服务应用</p></a></div>
 		<div class="pic"><a href="case7.html" ><div class="picaa"><img src="image/pic7.jpg"></div><h4>海外数字服务门户</h4><p>来自海外客户的门户</p></a></div>
-		<div class="pic"><a href="case8.html" ><div class="picaa"><img src="image/pic8.jpg"></div><h4>超能小展</h4><p>一款针对培训机构的IP形象设计</p></a></div>
+		<div class="pic"><a href="case8.html" ><div class="picaa"><img src="image/pic8.jpg"></div><h4>超能小展</h4><p>一款针对培训机构的IP形象设计</p></a></div>		
+		<div class="pic"><a href="case9.html" ><div class="picaa"><img src="image/pic9.jpg"></div><h4>悦学课堂</h4><p>一款线上教育应用</p></a></div>
 	</div>
 </div>
 
