--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<div class="pic"><a href="case7.html" ><div class="picaa"><img src="image/pic7.jpg"></div><h4>海外数字服务门户</h4><p>来自海外客户的门户</p></a></div>
 <!-- 		<div class="pic"><a href="case8.html" ><div class="picaa"><img src="image/pic8.jpg"></div><h4>吉利汽车GKUI 界面设计</h4><p>汽车导航：视觉设计+交互设计</p></a></div> -->
 	</div>
+	<a class='m' href="case.html"><span class="more">更多案例 +</span></a>
 </div>
 <div class="ct_3">
 	<h1>我们一起成长</h1>
